fix overflow on main editing section

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,9 @@
 .editingFull {
   position: absolute !important;
   left: 0px !important;
+  width: calc(100vw - 4px) !important;
+
+  transition: all 0.5s ease;
 }
 
 .editingSmall {
